agregamos un footer

--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
     <p>Este es otro parrafo</p>
     <p>Agregando otro parrafo</p>
 </body>
+<footer>
+    <p>Autor: Jesus Rubio</p>
+    <p><a href="mailto:jr@example.com">jr@example.com</a></p>
+  </footer>
 </html>
