--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<br />
 	<p class="four"></p>
 	<p class="five"></p>
+    <a href="">Web Dayana</a>
+    <a href="">Web Diego</a>
+    <a href="">Web Danny</a>
 </body>
 <footer>
     <p>Autor: Jesus Rubio</p>
