--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<p class="four"></p>
 	<p class="five"></p>
     <a href="">Web Dayana</a>
-    <a href="">Web Diego</a>
+    <a href="diego.html">Web Diego</a>
     <a href="">Web Danny</a>
 </body>
 <footer>
